styles/layout.css
:root {
  // default theme color
  // can be overrided by uses `themeConfig` option
  --slidev-theme-primary: #5d8392;
}

.slidev-layout {
  @apply text-40px;

  color: #343434;
  background-color: #F3F3F3;

  p {
    @apply leading-45px;
  }
}

.slidev-layout.cover,
.slidev-layout.intro,
.slidev-layout.section
 {
  @apply h-full flex flex-col justify-center text-center;

  h1 {
    @apply text-8xl leading-20;
  }

  h1 + p {
    @apply -mt-2 opacity-50 mb-4;
  }

  p + h2, ul + h2, table + h2 {
    @apply mt-10;
  }
}

.slidev-layout.default {
  h1 {
    @apply text-50px text-center leading-20;
  }

  ul li {
    @apply leading-1.3em;
  }

}

.slidev-layout.quote {
  @apply h-full flex flex-col justify-center;

  h1 {
    @apply font-serif text-center p-10 bg-gray-300;
  }
  h2 {
    @apply font-serif text-right italic;
  }
}

.slidev-layout.unsplash {
  h1 {
    @apply p-1rem bg-gray-500 bg-opacity-30;
    color: #F3F3F3;
  }
}

